--- a/www/flickr.html
+++ b/www/flickr.html
@@ -24,7 +24,7 @@
             <div id="center">               
                  <a href="index.html" data-icon="star" >home</a>
             </div>
-                    
+        <script type="text/javascript" src="cordova-2.3.0.js"></script>            
         <script src="http://code.jquery.com/jquery.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
