--- a/www/twitter.html
+++ b/www/twitter.html
@@ -14,11 +14,12 @@
             <h1>Wallie</h1>
             <h2>John J Plank</h2>
             <h2>AVF0113</h2> 
-           
-            <ul id="data-output">
-                <li id="data-msg">Getting Twitter...</li>
-            </ul>
 
+            <div id="onDeviceReady">
+                <ul id="data-output">
+                    <li id="data-msg">Getting Twitter...</li>
+                </ul>
+            </div>
         
             <div id="center">
                 <a href="index.html" data-icon="star" >home</a>
